fix: fixed layout on mobile devices

--- a/main.css
+++ b/main.css
@@ -12,7 +12,7 @@ html, body {
 }
 
 #container {
-  width: 50%;
+  width: 75%;
   height: 100%;
   margin: 0 auto;
   display: flex;
@@ -21,13 +21,18 @@ html, body {
   align-items: center;
 }
 
-#image {
-  width: 100%;
-  height: 100%;
-  background-repeat: no-repeat;
-  background-size: contain;
-  background-position: top;
-  margin-bottom: 100px;
+@media (orientation: portrait) {
+  #container {
+    width: 75%;
+    height: 75%;
+  }
+}
+
+@media screen and (min-width: 1024) {
+  #container {
+    width: 50%;
+    height: 75%;
+  }
 }
 
 #next {
@@ -37,8 +42,17 @@ html, body {
   background-color: #faa356;
   outline: none;
   cursor: pointer;
-  position: absolute;
-  margin-top: 45%;
+  margin-bottom: 100px;
+}
+
+#image {
+  width: 100%;
+  height: 100%;
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: top;
+  margin-bottom: 100px;
+  flex-grow: 3;
 }
 
 a {
